# flow-skills

./: .gitignore  CONTRIBUTING.md  README.md
.claude-plugin/: plugin.json
agents-management/: openfused.toml
agents-management/scripts/: pyproject.toml
feedback-management/: SKILL.md  openfused.toml
openfused-cli/: SKILL.md
openfused-execute/: SKILL.md
openfused-feedback/: SKILL.md
openfused-feedback/references/: components.md  parley.md
openfused-infra/: SKILL.md
openfused-projects/: SKILL.md
openfused-setup/: SKILL.md
openfused-storage/: SKILL.md
openfused-verify/: SKILL.md
openfused-widgets/: SKILL.md
run-management/: SKILL.md  openfused.toml
secrets-management/: SKILL.md
skills/agents-management/: SKILL.md  openfused.toml
skills/agents-management/scripts/: pyproject.toml  seed_agents.json
skills/agents-management/scripts/clone/: main.py  spec.md
skills/agents-management/scripts/create/: main.py  spec.md
skills/agents-management/scripts/delete/: main.py  spec.md
skills/agents-management/scripts/read/: main.py  spec.md
skills/agents-management/scripts/reset/: main.py  spec.md
skills/agents-management/scripts/tests/: conftest.py  test_main.py
skills/agents-management/scripts/update/: main.py  spec.md
skills/artifact-chat-management/: SKILL.md  openfused.toml
skills/artifact-chat-management/scripts/: pyproject.toml
skills/artifact-chat-management/scripts/append_message/: main.py  spec.md
skills/artifact-chat-management/scripts/clear/: main.py  spec.md
skills/artifact-chat-management/scripts/create/: main.py  spec.md
skills/artifact-chat-management/scripts/get/: main.py  spec.md
skills/artifact-chat-management/scripts/read/: main.py  spec.md
skills/artifact-chat-management/scripts/set_title/: main.py  spec.md
skills/artifact-chat-management/scripts/tests/: conftest.py  test_main.py
skills/artifact-chat-management/scripts/transcript/: main.py  spec.md
skills/feedback-management/: SKILL.md  openfused.toml
skills/feedback-management/scripts/: pyproject.toml
skills/feedback-management/scripts/acknowledge_feedback/: main.py  spec.md
skills/feedback-management/scripts/cancel_task_cards/: main.py  spec.md
skills/feedback-management/scripts/create_card/: main.py  spec.md
skills/feedback-management/scripts/delete_project/: main.py  spec.md
skills/feedback-management/scripts/find_notify_comment/: main.py  spec.md
skills/feedback-management/scripts/get_card/: main.py  spec.md
skills/feedback-management/scripts/has_unresolved_message/: main.py  spec.md
skills/feedback-management/scripts/inbox_view/: main.py  spec.md
skills/feedback-management/scripts/is_feedback_key_dismissed/: main.py  spec.md
skills/feedback-management/scripts/list_cards/: main.py  spec.md
skills/feedback-management/scripts/list_open_cards/: main.py  spec.md
skills/feedback-management/scripts/resolve_card/: main.py  spec.md
skills/feedback-management/scripts/tests/: conftest.py  test_main.py
skills/fused-cli/: SKILL.md
skills/secrets-management/scripts/: pyproject.toml
skills/secrets-management/scripts/delete/: main.py  spec.md
skills/secrets-management/scripts/get/: main.py  spec.md
skills/secrets-management/scripts/list/: main.py
skills/secrets-management/scripts/put/: main.py  spec.md
skills/secrets-management/scripts/tests/: conftest.py  test_main.py
task-management/: openfused.toml
(+131 files in other folders)
