[project]
name = "agents-management"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Required by the widget resolver (widgets/resolver.py RESOLVER_REQUIREMENTS):
    # when the local backend runs the resolver with project="agents-management",
    # the project venv is used as the execution interpreter, so the resolver's SQL
    # engine (duckdb) and its encoders (pandas, pyarrow) must be present here.
    "duckdb>=1.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    # The roster's on-disk format is YAML (AGENTS.md frontmatter + .openfused.yaml
    # sidecar). The Python stdlib has no YAML codec, so the UDFs parse/serialize via
    # PyYAML — a venv dependency exactly like duckdb above, NOT an openfused.* import
    # (the sandbox shadows that package). Round-trips with the app's npm `yaml`.
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8"]
