[project]
name = "feedback-management"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Required by the widget resolver (widgets/resolver.py RESOLVER_REQUIREMENTS):
    # when the local backend runs the resolver with project="feedback-management",
    # the project venv is used as the execution interpreter, so the resolver's SQL
    # engine (duckdb) and its encoders (pandas, pyarrow) must be present here.
    "duckdb>=1.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
