[project]
name = "secrets-management"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Required by the widget resolver (widgets/resolver.py RESOLVER_REQUIREMENTS):
    # when the local backend runs the resolver with project="secrets-management", the
    # project venv is used as the execution interpreter, so the resolver's SQL engine
    # (duckdb) and its encoders (pandas, pyarrow) must be present here.
    "duckdb>=1.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    # The secrets UDFs read/write the SAME OS keychain store as LocalSecretsBackend.
    # They share the keychain-blob model (no Fernet file),
    # so keyring is the only secrets dependency. Floor matches the repo root pyproject.toml.
    "keyring>=24",
    # File-based keyring backend available in the subprocess venv so the e2e test can
    # pin PYTHON_KEYRING_BACKEND=keyrings.alt.file.PlaintextKeyring + XDG_DATA_HOME for
    # hermetic, OS-keychain-free isolation without changing the production keyring usage.
    "keyrings.alt>=5",
]
